fixed sprixl div sizing and dark mode styling

--- a/styles/Work.module.css
+++ b/styles/Work.module.css
@@ -210,23 +210,41 @@
   display: flex;
 }
 
-.links {
+.linksdark,
+.linkslight {
   margin-left: 0.6em;
   transition: all 0.3s ease;
   cursor: pointer;
+}
+
+.linkslight {
   color: #07112f;
 }
 
-.linksblurred {
+.linksdark {
+  color: #e2e8ec;
+}
+
+.linksblurreddark,
+.linksblurredlight {
   margin-left: 0.6em;
   transition: all 0.3s ease;
   cursor: pointer;
-  color: #07112f;
   opacity: 0.2;
 }
 
-.links:hover,
-.links:active {
+.linksblurredlight {
+  color: #07112f;
+}
+
+.linksblurreddark {
+  color: #e2e8ec;
+}
+
+.linksdark:hover,
+.linksdark:active,
+.linkslight:hover,
+.linkslight:active {
   color: #24ff7c;
 }
 
@@ -253,7 +271,8 @@
   margin-right: 0.5em;
 }
 
-.archivebtn {
+.archivebtnlight,
+.archivebtndark {
   width: 100%;
   background-color: #24ff7c;
   border: 3px solid #24ff7c;
@@ -265,10 +284,18 @@
   justify-content: center;
   align-items: center;
   transition: all 0.3s ease;
+  color: #07112f;
 }
 
-.archivebtn:hover,
-.archivebtn:active {
+.archivebtndark:hover,
+.archivebtndark:active {
+  color: #24ff7c;
+}
+
+.archivebtnlight:hover,
+.archivebtnlight:active,
+.archivebtndark:hover,
+.archivebtndark:active {
   background-color: #24ff7c52;
 }
 
@@ -369,14 +396,15 @@
   .workcontainerdark,
   .workcontainerblurreddark,
   .workcontainerblurredlight {
-    width: 28vw;
+    width: 50%;
+    max-width: none;
   }
 
   .sprixlworkcontainerlight,
   .sprixlworkcontainerdark {
-    max-width: none;
     width: 100%;
     height: 250px;
+    max-width: none;
   }
 
   .titlelight,
@@ -411,7 +439,8 @@
     justify-content: flex-end;
   }
 
-  .archivebtn {
+  .archivebtndark,
+  .archivebtnlight {
     width: 49%;
   }
 }
